Cria uma MasterDetailPage e implementa a navegação entre as páginas do menu

--- a/PedidoFacil/PedidoFacil/PedidoFacil/Views/ClientesPage.xaml
+++ b/PedidoFacil/PedidoFacil/PedidoFacil/Views/ClientesPage.xaml
@@ -6,7 +6,7 @@
              x:Class="PedidoFacil.Views.ClientesPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="Clientes"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
