--- a/PedidoFacil/PedidoFacil/PedidoFacil/Views/MainPage.xaml
+++ b/PedidoFacil/PedidoFacil/PedidoFacil/Views/MainPage.xaml
@@ -1,11 +1,71 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PedidoFacil.Views.MainPage"
-             Title="{Binding Title}">
+<MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
+            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            x:Class="PedidoFacil.Views.MainPage">
 
-    <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-        <Label Text="Welcome to Xamarin Forms and Prism!" />
-    </StackLayout>
+    <MasterDetailPage.Master>
+        <ContentPage Title="Menu" BackgroundColor="#e8e8e8">
+            <StackLayout Orientation="Vertical">
+                <StackLayout BackgroundColor="#e74c3c" HeightRequest="75">
+                    <Label Text="Menu" FontSize="20"
+                           VerticalOptions="CenterAndExpand"
+                           TextColor="White"
+                           HorizontalOptions="Center"></Label>
+                </StackLayout> 
 
-</ContentPage>
+                <ListView x:Name="NavigationMenuList" RowHeight="60"
+                          SeparatorVisibility="None" BackgroundColor="#e8e8e8"
+                          ItemsSource="{Binding MenuItemList, Mode=OneWay}"
+                          ItemSelected="OnMenuItemSelected">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <StackLayout VerticalOptions="FillAndExpand"
+                                   Orientation="Horizontal"
+                                   Padding="20,10,0,10" Spacing="20">
+
+                                    <Image Source="{Binding Icon}"
+                                     WidthRequest="40"  HeightRequest="40" 
+                                     VerticalOptions="Center" />
+
+                                    <Label Text="{Binding Title}"
+                                       FontSize="Medium"
+                                       VerticalOptions="Center"
+                                       TextColor="Black"/>
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+
+                <!--<ListView x:Name="NavigationMenuList" RowHeight="60"
+                          SeparatorVisibility="None" BackgroundColor="#e8e8e8">
+                    <ListView.Behaviors>
+                        <b:EventToCommandBehavior EventName="ItemSelected" 
+                                      Command="{Binding MenuItemSelectedCommand}"
+                                      CommandParameter="SelectedItem" />
+                    </ListView.Behaviors>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <StackLayout VerticalOptions="FillAndExpand"
+                                             Orientation="Horizontal"
+                                             Padding="20,10,0,10" Spacing="20">
+                                    <Label Text="{Binding Title}"
+                                           FontSize="Medium"
+                                           VerticalOptions="Center"
+                                           TextColor="Black"></Label>
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>-->
+            </StackLayout>
+        </ContentPage>
+    </MasterDetailPage.Master>
+
+    <MasterDetailPage.Detail>
+        <ContentPage />
+    </MasterDetailPage.Detail>
+
+</MasterDetailPage>
