--- a/PedidoFacil/PedidoFacil/PedidoFacil/Views/PedidosPage.xaml
+++ b/PedidoFacil/PedidoFacil/PedidoFacil/Views/PedidosPage.xaml
@@ -6,7 +6,7 @@
              x:Class="PedidoFacil.Views.PedidosPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="Pedidos"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
