--- a/PedidoFacil/PedidoFacil/PedidoFacil/Views/PedidosPage.xaml
+++ b/PedidoFacil/PedidoFacil/PedidoFacil/Views/PedidosPage.xaml
@@ -3,11 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="PedidoFacil.Views.PedidosPage">
+             x:Class="PedidoFacil.Views.PedidosPage"
+            Title="Pedidos">
 
-    <ContentPage Title="{Binding TitleTab1}">
+    <ContentPage Title="{Binding TitleTab1}" BackgroundColor="LightBlue" Padding="5">
         <ListView x:Name="PedidosSentList"
-                      RowHeight="80"
+                      RowHeight="110"
                       SeparatorVisibility="None"
                       ItemsSource="{Binding PedidosSentList, Mode=OneWay}"
                       ItemSelected="PedidosSentList_ItemSelected">
@@ -15,14 +16,17 @@
                 <DataTemplate>
                     <ViewCell>
                         <StackLayout VerticalOptions="FillAndExpand"
-                                         BackgroundColor="White"
-                                         Orientation="Vertical"
-                                         Spacing="0">
+                                     BackgroundColor="White"
+                                     Orientation="Vertical"
+                                     Spacing="0"
+                                     Padding="7"
+                                     Margin="0,0,0,5">
 
                             <Label Text="{Binding PedidoNumber}"
                                    FontSize="14"
                                    VerticalOptions="Center"
-                                   TextColor="Black"/>
+                                   TextColor="Black"
+                                   Margin="0,0,0,5"/>
                             <Label Text="{Binding ClienteName}"
                                    FontSize="10"
                                    VerticalOptions="Center"
@@ -35,6 +39,7 @@
                                    FontSize="10"
                                    VerticalOptions="Center"
                                    TextColor="DarkSlateGray"/>
+                            <BoxView BackgroundColor="LightGray" HeightRequest="1" Margin="0,5,0,5"></BoxView>
                             <Label Text="{Binding FormattedValue}"
                                     FontSize="14"
                                     VerticalOptions="Center"
@@ -46,9 +51,9 @@
         </ListView>
     </ContentPage>
 
-    <ContentPage Title="{Binding TitleTab2}">
+    <ContentPage Title="{Binding TitleTab2}" BackgroundColor="LightBlue" Padding="5">
         <ListView x:Name="PedidosNotSentList"
-                      RowHeight="80"
+                      RowHeight="110"
                       SeparatorVisibility="None"
                       ItemsSource="{Binding PedidosNotSentList, Mode=OneWay}"
                       ItemSelected="PedidosSentList_ItemSelected">
@@ -56,14 +61,17 @@
                 <DataTemplate>
                     <ViewCell>
                         <StackLayout VerticalOptions="FillAndExpand"
-                                         BackgroundColor="White"
-                                         Orientation="Vertical"
-                                         Spacing="0">
+                                     BackgroundColor="White"
+                                     Orientation="Vertical"
+                                     Spacing="0"
+                                     Padding="7"
+                                     Margin="0,0,0,5">
 
                             <Label Text="{Binding PedidoNumber}"
                                    FontSize="14"
                                    VerticalOptions="Center"
-                                   TextColor="Black"/>
+                                   TextColor="Black"
+                                   Margin="0,0,0,5"/>
                             <Label Text="{Binding ClienteName}"
                                    FontSize="10"
                                    VerticalOptions="Center"
@@ -76,6 +84,7 @@
                                    FontSize="10"
                                    VerticalOptions="Center"
                                    TextColor="DarkSlateGray"/>
+                            <BoxView BackgroundColor="LightGray" HeightRequest="1" Margin="0,5,0,5"></BoxView>
                             <Label Text="{Binding FormattedValue}"
                                     FontSize="14"
                                     VerticalOptions="Center"
